Fixed chosen inputs from cutting off text in modals/tabs

--- a/app/bundles/CoreBundle/Assets/css/libraries/chosen/bootstrap-chosen.less
+++ b/app/bundles/CoreBundle/Assets/css/libraries/chosen/bootstrap-chosen.less
@@ -253,7 +253,7 @@
       margin: 0;
       padding: 0;
       white-space: nowrap;
-
+      width: 100%;
       input[type="text"] {
         background: transparent !important;
         border: 0 !important;
