--- a/app/bundles/CoreBundle/Assets/css/libraries/libraries.css
+++ b/app/bundles/CoreBundle/Assets/css/libraries/libraries.css
@@ -8275,6 +8275,7 @@ button.close {
   margin: 0;
   padding: 0;
   white-space: nowrap;
+  width: 100%;
 }
 .chosen-container-multi .chosen-choices .search-field input[type="text"] {
   background: transparent !important;
